# FlagSparse

./: .dockerignore  .pre-commit-config.yaml  Makefile  README.md  README_cn.md  ops_support.csv  ops_support.py  ops_support_sort_check.csv  pyproject.toml  pytest.ini  run_flagsparse_accuracy.py  run_flagsparse_performance.py  run_flagsparse_pytest.py  setup.py
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-deb.yml  build-rpm.yml  ci.yml  gpu-benchmark.yml  gpu-ci.yml  nightly-cpu.yml  release-drafter.yml  release.yml  triton-smoke.yml
benchmark/: attri_util.py  benchmark_gather.py  benchmark_scatter.py  benchmark_sddmm.py  benchmark_spgemm.py  benchmark_spmm.py  benchmark_spmm_opt.py  benchmark_spmv.py  benchmark_spsm.py  benchmark_spsv.py  conftest.py  core_shapes.yaml  performance_utils.py  summary_for_plot.py  test_sparse_perf.py
conf/: operators.yaml
packaging/debian/: changelog  control  copyright  rules
packaging/debian/build-helpers/: Dockerfile.deb  build-flagsparse.sh
packaging/rpm/: build-flagsparse-rpm.sh
packaging/rpm/dockerfiles/: Dockerfile.rpm
packaging/rpm/specs/: flagsparse.spec
src/flagsparse/: __init__.py  sparse_formats.py
src/flagsparse/sparse_operations/: __init__.py  _alpha_spmm_alg1_common.py  _common.py  alpha_spmm_alg1.py  benchmarks.py  gather_scatter.py  sddmm_csr.py  spgemm_csr.py  spmm_coo.py  spmm_csr.py  spmm_csr_opt_alg2.py  spmv_bsr.py  spmv_coo.py  spmv_csc.py  spmv_csr.py  spsm.py  spsv.py
tests/: __init__.py  diagnose_hipsparse_ref.py  diagnose_spmm_opt.py  diagnose_spmm_opt_alg2.py  test_alpha_spmm_alg1.py  test_gather.py  test_scatter.py  test_sddmm.py  test_spgemm.py  test_spmm.py  test_spmm_coo.py  test_spmm_csr.py  test_spmm_opt.py  test_spmm_opt_alg2.py  test_spmv.py  test_spmv_bsr.py  test_spmv_coo.py  test_spmv_csc.py  test_spmv_opt.py  test_spsm.py  test_spsv.py  test_spsv_sell.py
tests/ci/: test_accuracy_policy.py  test_benchmark_policy.py  test_cli_help.py  test_gather_contract.py  test_gpu_ci_policy.py  test_installed_wheel.py  test_operator_registry.py  test_package_smoke.py  test_packaging_metadata.py  test_precommit_policy.py  test_public_api.py  test_readme_examples.py  test_runner_result_format.py  test_runtime_policies.py  test_sparse_common_cpu.py
tests/pytest/: Note.md  __init__.py  accuracy_utils.py  conftest.py  param_shapes.py  test_alpha_spmm_alg1_accuracy.py  test_gather_scatter_accuracy.py  test_spgemm_sddmm_accuracy.py  test_spmm_coo_accuracy.py  test_spmm_csr_accuracy.py  test_spmm_csr_opt_alg2_accuracy.py  test_spmv_bsr_accuracy.py  test_spmv_coo_accuracy.py  test_spmv_csc_accuracy.py  test_spmv_csr_accuracy.py  test_spsm_accuracy.py  test_spsv_coo_accuracy.py  test_spsv_csr_accuracy.py  test_spsv_sell_accuracy.py
tools/ci/: check_gpu_environment.py  check_installed_wheel.py  check_release_artifacts.py  requirements-ci.lock.txt  requirements-ci.txt  requirements-triton-smoke.lock.txt  requirements-triton-smoke.txt  run_gpu_benchmark.py  write_release_checksums.py
