[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flagsparse"
version = "1.0.0"
description = "FlagSparse - GPU sparse operations package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/yourusername/flagsparse"
Repository = "https://github.com/yourusername/flagsparse"

[tool.setuptools.packages.find]
where = ["src"]
